ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: froebels-newletter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: newsletter.froebels.edu.pk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80					
  tls:
    - hosts:
      - newsletter.froebels.edu.pk
      secretName: letsencrypt-production-newsletter
